# RayTracingCuda

./: .clang-format  .gitignore  CMakeLists.txt  vcpkg.json
App/: CMakeLists.txt  main.cpp
Kernel/: CMakeLists.txt
Kernel/include/: Camera.cuh  Dielectric.cuh  Dispatcher.hpp  FuzzyMetalReflection.cuh  Hitable.cuh  HitableList.cuh  ImageMaker.h  Interval.cuh  KernelExports.hpp  Lambertian.cuh  Macro.h  Material.cuh  Metal.cuh  Observer.hpp  Ray.cuh  RayTracer.cuh  Render.h  Sphere.cuh  TextureLoader.h
Kernel/src/: Camera.cu  Dielectric.cu  Dispatcher.cpp  FuzzyMetalReflection.cu  HitableList.cu  ImageMaker.cu  Lambertian.cu  Metal.cu  RayTracer.cu  Render.cu  Sphere.cu  TextureLoader.cpp
Materials/: CMakeLists.txt
Materials/include/: Dielectric.cuh  DiffuseLight.cuh  FuzzyMetalReflection.cuh  HitRecord.cuh  Lambertian.cuh  Material.cuh  MaterialExports.hpp  Metal.cuh  Ray.cuh  Texture.cuh  TextureLoader.h
Materials/src/: Dielectric.cu  FuzzyMetalReflection.cu  Lambertian.cu  Metal.cu  TextureLoader.cpp
Objects/: CMakeLists.txt
Objects/include/: AABB.cuh  BvhNode.cuh  Hitable.cuh  HitableList.cuh  Interval.cuh  ObjectExports.hpp  Quad.cuh  Sphere.cuh
Objects/src/: AABB.cu  BvhNode.cu  HitableList.cu  Quad.cu  Sphere.cu
Render/: CMakeLists.txt
Render/include/: Element.hpp  Image.hpp  RenderExports.hpp  RenderWindow.hpp
Render/shader/: fragmentShader.frag  vertexShader.vert
Render/src/: Image.cpp  RenderWindow.cpp
doc/: Ray Tracing in next week.md  Ray tracing笔记1-path traching.md  RayTracing笔记2-material.md  cuda项目组织.md  sphere_coordinates.md  四元数的使用.md  纹理类型.md
